--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build src/index.html"
+    "test": "node tests/nasa-feed.test.js",
+    "build": "npm run test && parcel build src/index.html"
   },
   "author": "fedex",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.26.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.3",
